# EVE-Online

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  config.toml  pyproject.toml
src/evemarket/: __init__.py  cli.py  config.py  scheduler.py
src/evemarket/analytics/: backtest.py  features.py  fees.py  haul.py  opportunity.py  station_trade.py  walkforward.py
src/evemarket/esi/: client.py  models.py
src/evemarket/ingest/: backfill.py  history.py  orders.py  prices.py
src/evemarket/sde/: __init__.py  load.py
src/evemarket/store/: quality.py  readers.py  schema.py  writers.py
src/evemarket/ui/: app.py
tests/: test_backfill_history.py  test_backtest.py  test_cli_backtest.py  test_cli_haul.py  test_cli_scan.py  test_config.py  test_esi_client.py  test_features.py  test_fees.py  test_haul.py  test_ingest_history.py  test_ingest_orders.py  test_ingest_prices.py  test_opportunity.py  test_quality.py  test_readers.py  test_scheduler.py  test_sde_load.py  test_station_trade.py  test_ui_app.py  test_walkforward.py
tests/fixtures/sde/: invMarketGroups.csv  invTypes.csv  mapRegions.csv  mapSolarSystems.csv  staStations.csv
